feat: dto refactored to use records
Signed-off-by: Dima Denisenko <1253839+dmitriidenisenko@users.noreply.github.com>